fix: 修复启动告警并补充站点图标